--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="title-container">
                 <div class="title-image-wrapper">
                     <div class="title"> <br>
-                        <h1>hi, i'm caitlyn!</h1>
+                        <h1>caitlyn</h1>
                         <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight:500;">any pronouns</p>
                         <div class="line"></div>
                     </div>
@@ -93,6 +93,9 @@
                 <div class="friends">
                     <a href="https://botmert.com" class="link-box" target="_blank">
                         <img src="https://botmert.com/assets/icon.jpg" alt="Website Icon">
+                    </a>
+                    <a href="https://github.com/khcrysalis" class="link-box" target="_blank">
+                        <img src="https://avatars.githubusercontent.com/u/97859147?v=4" alt="Website Icon">
                     </a>
                     <div class="line"></div>
                 </div>
