--- a/index.html
+++ b/index.html
@@ -22,22 +22,24 @@
 <body data-barba="wrapper">
     <div data-barba="container">
         <div id="content-wrapper" class="content-wrapper">
-            <div class="buttons">
-                <a href="/" class="kosukadev">kosuka.dev</a>
-                <div class="svgs">
-                </div>
 
-                <div class="button-border">
-                    <a href="/" class="Home">Home</a>
+
+            <div class="nav">
+                <a href="/" class="left-link">kosuka.dev</a>
+                <div class="right-links">
+                    <a href="https://x.com/fielstamper" class="twittersvg"></a>
                     <a href="/about/" class="About">About</a>
                     <a href="/contact/" class="Contact">Contact</a>
                 </div>
             </div>
+
+
             <div class="title-container">
                 <div class="title-image-wrapper">
                     <div class="title"> <br>
                         <h1>caitlyn</h1>
-                        <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight:500;">any pronouns</p>
+                        <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight:500;">any pronouns
+                        </p>
                         <div class="line"></div>
                     </div>
                 </div>
@@ -49,7 +51,8 @@
                         <p>Hi! I'm a 19 year old girl from <strong>australia</strong> who is majoring in
                             computer science that loves to learn new things all the time. </p>
                         <p> I'm currently studying: <strong>programming</strong>
-                            (python <img src="assets/python-svgrepo-com.svg" alt="python-emoji" class="pythonemoji"> ),
+                            (python <img src="assets/python-svgrepo-com.svg" alt="python-emoji" class="pythonemoji">
+                            ),
                             <strong>mandarin,</strong> and 3D
                             modeling via <strong>blender!</strong>
                         </p>
