--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h2 style="margin-bottom: 0;">Projects</h2>
                     <p style="margin-top: 3px; color: rgb(180, 180, 180);">Currently empty</p>
                 </div>
-                <div><br><br>
+                <div>
                     <h2>Creative projects</h2>
                     <div class="creativewrapper">
                         <a href="blender/index.html" class="nira-chan-box">
@@ -90,13 +90,17 @@
                     <a href="https://botmert.com" class="link-box" target="_blank">
                         <img src="https://botmert.com/assets/icon.jpg" alt="Website Icon">
                     </a>
-                    <a href="https://github.com/khcrysalis" class="link-box" target="_blank">
+                    <a href="https://github.com/khcrysalis" class="link-box2" target="_blank">
                         <img src="https://avatars.githubusercontent.com/u/97859147?v=4" alt="Website Icon">
                     </a>
-                    <div class="line"></div>
                 </div>
-                <div id="lastfm-container"></div>
+                <div>
+                    <div class="line">
+                    </div>
+                </div>
             </div>
+            <div id="lastfm-container"></div>
         </div>
+    </div>
     </div>
 </body>
