--- a/contact/index.html
+++ b/contact/index.html
@@ -20,64 +20,59 @@
 
 </head>
 
-<body>
-    <div class="content-wrapper">
-        <div class="buttons">
-            <div class="svgs">
-                </a>
-                <a href="https://x.com/fielstamper" class="twittersvg">
-                    <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
-                        text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd"
-                        clip-rule="evenodd" viewBox="0 0 512 462.799">
-                        <path fill="#fff" fill-rule="nonzero"
-                            d="M403.229 0h78.506L310.219 196.04 512 462.799H354.002L230.261 301.007 88.669 462.799h-78.56l183.455-209.683L0 0h161.999l111.856 147.88L403.229 0zm-27.556 415.805h43.505L138.363 44.527h-46.68l283.99 371.278z" />
-                    </svg>
-                </a>
-            </div>
-            <div class="button-border">
-                <a href="/" class="Home">Home</a>
-                <a href="/about/" class="About">About</a>
-                <a href="/contact/" class="Contact">Contact</a>
-            </div>
-        </div>
-        <div class="title-container">
-            <div class="title-image-wrapper">
-                <div class="title"> <br>
-                    <h1>hi, i'm caitlyn!</h1>
-                    <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight:500;">any pronouns
-                    </p>
-                    <div class="line"></div>
+<body data-barba="wrapper">
+    <div data-barba="container">
+        <div id="content-wrapper" class="content-wrapper">
+
+
+            <div class="nav">
+                <a href="/" class="left-link">kosuka.dev</a>
+                <div class="right-links">
+                    <a href="https://x.com/fielstamper" class="twittersvg"></a>
+                    <a href="/about/" class="About">About</a>
+                    <a href="/contact/" class="Contact">Contact</a>
                 </div>
             </div>
-            <div class="title-subtext">
-                <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
-            </div>
-            <div class="contactbox">
-                <div class="col1">
-                    <p class="twitterbox">
-                        Twitter
-                    </p>
-                    <p class="twitterbox">
-                        Github
-                    </p>
+
+
+            <div class="title-container">
+                <div class="title-image-wrapper">
+                    <div class="title"> <br>
+                        <h1>caitlyn</h1>
+                        <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight:500;">any pronouns
+                        </p>
+                        <div class="line"></div>
+                    </div>
                 </div>
-                <div class="col2">
-                    <p class="twitterbox">
-                        Discord
-                    </p>
-                    <p class="twitterbox">
-                        Email
-                    </p>
+                <div class="title-subtext">
+                    <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
                 </div>
-                <div class="col3">
-                    <p class="twitterbox">
-                        Other 1
-                    </p>
-                    <p class="twitterbox">
-                        Other 2
-                    </p>
+                <div class="contactbox">
+                    <div class="col1">
+                        <p class="twitterbox">
+                            Twitter
+                        </p>
+                        <p class="twitterbox">
+                            Github
+                        </p>
+                    </div>
+                    <div class="col2">
+                        <p class="twitterbox">
+                            Discord
+                        </p>
+                        <p class="twitterbox">
+                            Email
+                        </p>
+                    </div>
+                    <div class="col3">
+                        <p class="twitterbox">
+                            Other 1
+                        </p>
+                        <p class="twitterbox">
+                            Other 2
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </body>
