--- a/blender/index.html
+++ b/blender/index.html
@@ -1,19 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blender</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width">
+    <link rel="canonical" href="https://kosuka.dev">
+    <meta name="robots" content="index, follow">
+    <meta content="https://avatars.githubusercontent.com/u/161728157?v=4" name="twitter:image">
+    <meta content="caitlyn's site" name="twitter:title">
+    <meta content="my creative projects" name="twitter:description">
+    <link rel="icon" href="https://i.imgur.com/SHR6b4fh.jpg">
+    <title>caitlyn's site</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="/js/script.js"></script>
+
 </head>
 
-<body>
-    <div class="wrapper">
-        <h1>Blender</h1>
-        <p>wip</p>
-        <a href="/" class="button">Back to Home</a>
-    </div>
-</body>
+<body data-barba="wrapper">
+    <div data-barba="container">
+        <div id="content-wrapper" class="content-wrapper">
+
+
+            <div class="nav">
+                <a href="/" class="left-link">kosuka.dev</a>
+                <div class="right-links">
+                    <a href="https://x.com/fielstamper" class="twittersvg"></a>
+                    <a href="/about/" class="About">About</a>
+                    <a href="/contact/" class="Contact">Contact</a>
+                </div>
+            </div>
+
+
+            <div class="title-container">
+                <div class="title-image-wrapper">
+                    <div class="title"> <br>
+                        <h1>caitlyn</h1>
+                        <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight:500;">any pronouns
+                        </p>
+                        <div class="line"></div>
+                    </div>
+                </div>
 
 </html>
