--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="canonical" href="https://caitlyn.cc">
+    <link rel="canonical" href="https://kosuka.dev">
     <meta name="robots" content="index, follow">
     <meta content="https://avatars.githubusercontent.com/u/161728157?v=4" name="twitter:image">
     <meta content="caitlyn's site" name="twitter:title">
