--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="canonical" href="https://caitlyn.cc">
+    <link rel="canonical" href="https://kosuka.dev">
     <meta name="robots" content="index, follow">
     <meta content="https://avatars.githubusercontent.com/u/161728157?v=4" name="twitter:image">
     <meta content="caitlyn's site" name="twitter:title">
@@ -73,7 +73,7 @@
                 <div>
                     <h2>Creative projects</h2>
                     <div class="creativewrapper">
-                        <a href="blender/index.html" class="nira-chan-box">
+                        <a href="/blender/" class="nira-chan-box">
                             nira_chan.blend <p class="creative-text">A stylised 3d model of Nira from Zutomayo with
                                 size-emphasis on the shoes.</p>
                         </a>
