--- a/blender/index.html
+++ b/blender/index.html
@@ -44,5 +44,9 @@
                         <div class="line"></div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</body>
 
 </html>
