--- a/blender/index.html
+++ b/blender/index.html
@@ -22,26 +22,33 @@
 
 <body data-barba="wrapper">
     <div data-barba="container">
-        <div id="content-wrapper" class="content-wrapper">
-
-
-            <div class="nav">
-                <a href="/" class="left-link">kosuka.dev</a>
-                <div class="right-links">
-                    <a href="https://x.com/fielstamper" class="twittersvg"></a>
-                    <a href="/about/" class="About">About</a>
-                    <a href="/contact/" class="Contact">Contact</a>
-                </div>
+        <div class="nav">
+            <a href="/" class="left-link">kosuka.dev</a>
+            <div class="right-links">
+                <a href="https://x.com/fielstamper" class="twittersvg"></a>
+                <a href="/about/" class="About">About</a>
+                <a href="/contact/" class="Contact">Contact</a>
             </div>
-
-
-            <div class="title-container">
-                <div class="title-image-wrapper">
-                    <div class="title"> <br>
-                        <h1>caitlyn</h1>
-                        <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight:500;">any pronouns
-                        </p>
-                        <div class="line"></div>
+        </div>
+        <div class="title-container">
+            <div class="title-image-wrapper">
+                <div class="title"> <br>
+                    <h1>caitlyn</h1>
+                    <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight:500;">any pronouns
+                    </p>
+                    <div class="line">
+                    </div>
+                    <div class="blender-wrapper">
+                        <div class="top-box">
+                            <img src="/assets/side_view_girl.png">
+                            <img src="/assets/front_view_girl.png">
+                            <img src="/assets/right_view_girl.png">
+                        </div>
+                        <div class="bottom-box">
+                            <img src="/assets/side_view_girl.png">
+                            <img src="/assets/front_view_girl.png">
+                            <img src="/assets/right_view_girl.png">
+                        </div>
                     </div>
                 </div>
             </div>
