--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             nira_chan.blend <p class="creative-text">A stylised 3d model of Nira from Zutomayo with
                                 size-emphasis on the shoes.</p>
                         </a>
-                        <a href="blender/index.html" class="other-chan-box">
+                        <a href="/blender/" class="other-chan-box">
                             .blend <p class="creative-text">wip</p>
                         </a>
                     </div>
