--- a/index.html
+++ b/index.html
@@ -66,18 +66,30 @@
                             Huge music nerd and one piece fanatic
                     </div>
                 </div>
+                <div class="abouttext">
+                    <p> Timezone: GMT+8</p>
+                    <p> Pronouns: any </p>
+                    <p> Timezone: GMT+8 </p>
+                </div>
                 <div class="projectsheader">
                     <h2 style="margin-bottom: 0;">Projects</h2>
-                    <p style="margin-top: 3px; color: rgb(180, 180, 180);">Currently empty</p>
+                    <p style="margin-top: 3px; color: rgb(180, 180, 180);"></p>
+                </div>
+                <div class="projectwrapper">
+                    <a href="https://github.com/fielstamper/kosuka.dev" class="projectcol1box">
+                        https://kosuka.dev/ <p class="creative-text">The website you're currently on, built very....
+                            poorly.
+                        </p>
+                    </a>
                 </div>
                 <div>
                     <h2>Creative projects</h2>
-                    <div class="creativewrapper">
-                        <a href="/blender/" class="nira-chan-box">
+                    <div class="projectwrapper">
+                        <a href="/blender/" class="projectcol1box">
                             nira_chan.blend <p class="creative-text">A stylised 3d model of Nira from Zutomayo with
                                 size-emphasis on the shoes.</p>
                         </a>
-                        <a href="/blender/" class="other-chan-box">
+                        <a href="/blender/" class="projectcol2box">
                             .blend <p class="creative-text">wip</p>
                         </a>
                     </div>
