--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
                             Huge music nerd and one piece fanatic
                     </div>
                 </div>
-                <div class="abouttext">
-                    <p> </p>
-                    <p> </p>
-                    <p> </p>
-                </div>
+                <!-- <div class="abouttext">
+                    <p> Timezone: GMT+8</p>
+                    <p> Pronouns: any </p>
+                    <p> Timezone: GMT+8 </p>
+                </div> -->
                 <div class="projectsheader">
                     <h2 style="margin-bottom: 0;">Projects</h2>
                     <p style="margin-top: 3px; color: rgb(180, 180, 180);"></p>
                 </div>
                 <div class="projectwrapper">
                     <a href="https://github.com/fielstamper/kosuka.dev" class="projectcol1box">
-                        https://kosuka.dev/ <p class="creative-text">The website you're currently on, built very....
+                        https://kosuka.dev <p class="creative-text">The website you're currently on, built very....
                             poorly.
                         </p>
                     </a>
