--- a/blender/index.html
+++ b/blender/index.html
@@ -44,7 +44,7 @@
                     <p style="color: rgb(180, 180, 180); margin-top: 0;">
                         A stylised 3d model of Nira from Zutomayo with
                         size-emphasis on the shoes.
-                    <div class="top-box">
+                    <div class="box">
                         </p>
                         <img src="/assets/side_view_girl.png">
                         <img src="/assets/front_view_girl.png">
