--- a/blender/index.html
+++ b/blender/index.html
@@ -37,22 +37,22 @@
                     <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight: 500;">any pronouns
                     </p>
                 </div>
-                <div class="blender-wrapper">
-                    <h2 style="font-size: 18px; margin-bottom: 0;">
-                        Nira-Chan
-                    </h2>
-                    <p style="color: rgb(180, 180, 180); margin-top: 0;">
-                        A stylised 3d model of Nira from Zutomayo with
-                        size-emphasis on the shoes.
-                    <div class="box">
-                        </p>
-                        <img src="/assets/side_view_girl.png">
-                        <img src="/assets/front_view_girl.png">
-                        <img src="/assets/right_view_girl.png">
-                    </div>
-                    <div class="bottom-box">
+            </div>
+            <div class="blender-wrapper">
+                <h2 style="font-size: 18px; margin-bottom: 0;">
+                    Nira-Chan
+                </h2>
+                <p style="color: rgb(180, 180, 180); margin-top: 0;">
+                    A stylised 3d model of Nira from Zutomayo with
+                    size-emphasis on the shoes.
+                </p>
+                <div class="top-box">
+                    <img src="/assets/side_view_girl.png">
+                    <img src="/assets/front_view_girl.png">
+                    <img src="/assets/right_view_girl.png">
+                </div>
+                <div class="bottom-box">
 
-                    </div>
                 </div>
             </div>
         </div>
