--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <p> I'm currently studying: <strong>programming</strong>
                             (python <img src="assets/python-svgrepo-com.svg" alt="python-emoji" class="pythonemoji">
                             ),
-                            <strong>mandarin,</strong> and 3D
+                            <strong>mandarin,</strong> and 3d
                             modeling via <strong>blender!</strong>
                         </p>
                     </div>
