--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 </div>
                 <div class="projectwrapper">
                     <a href="https://github.com/fielstamper/kosuka.dev" class="projectcol1box">
-                        https://kosuka.dev <p class="creative-text">The website you're currently on, built very....
-                            poorly.
+                        https://kosuka.dev <p class="creative-text">The website you're currently on, built with HTML,
+                            CSS & JS.
                         </p>
                     </a>
                 </div>
