--- a/blender/index.html
+++ b/blender/index.html
@@ -34,15 +34,16 @@
             <div class="title-image-wrapper">
                 <div class="title"> <br>
                     <h1>caitlyn</h1>
-                    <p class="title-subtext" style="color: rgb(180, 180, 180); font-weight: 500;">any pronouns
+                    <p class="title-subtext" style="color: rgb(214, 214, 214); font-weight: 500;">any pronouns
                     </p>
                 </div>
             </div>
             <div class="blender-wrapper">
+                <br>
                 <h2 style="font-size: 18px; margin-bottom: 0;">
-                    Nira-Chan
+                    Nira-Chan - <span style="font-size: 14px; color: rgb(214, 214, 214);">02/18/2025</span>
                 </h2>
-                <p style="color: rgb(180, 180, 180); margin-top: 0;">
+                <p style="color: rgb(214, 214, 214); margin-top: 0;">
                     A stylised 3d model of Nira from Zutomayo with
                     size-emphasis on the shoes.
                 </p>
