--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="/contact/" class="Contact">Contact</a>
                 </div>
             </div>
-
+            <div class="line"></div>
 
             <div class="title-container">
                 <div class="title-image-wrapper">
@@ -42,72 +42,67 @@
                         </p>
                     </div>
                 </div>
-                <div class="title-subtext">
-                    <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
-                </div>
-                <div class="box-container">
-                    <div class="box">
-                        <p>Hi! I'm a 19 year old girl from <strong>australia</strong> who is majoring in
-                            computer science that loves to learn new things all the time. </p>
-                        <p> I'm currently studying: <strong>programming</strong>
-                            (python <img src="assets/python-svgrepo-com.svg" alt="python-emoji" class="pythonemoji">
-                            ),
-                            <strong>mandarin,</strong> and 3d
-                            modeling via <strong>blender!</strong>
-                        </p>
-                    </div>
-                    <div class="box2">
-                        <p>
-                            <strong>Actively interested in front end development.</strong>
-                            <br>
-                            <br>
-                        <p>
-                            Huge music nerd and one piece fanatic
-                    </div>
-                </div>
-                <div class="projectsheader">
-                    <h2 style="margin-bottom: 0;">Projects</h2>
-                    <p style="margin-top: 3px; color: rgb(180, 180, 180);"></p>
-                </div>
-                <div class="projectwrapper">
-                    <a href="https://github.com/fielstamper/kosuka.dev" class="projectcol1box">
-                        https://kosuka.dev <p class="creative-text">The website you're currently on, built with HTML,
-                            CSS & JS.
-                        </p>
-                    </a>
-                </div>
-                <div>
-                    <h2>Creative projects</h2>
-                    <div class="projectwrapper">
-                        <a href="/blender/" class="projectcol1box">
-                            nira_chan.blend <p class="creative-text">A stylised 3d model of Nira from Zutomayo with
-                                size-emphasis on the shoes.</p>
-                        </a>
-                        <a href="/blender/" class="projectcol2box">
-                            .blend <p class="creative-text">wip</p>
-                        </a>
-                    </div>
-                    <br>
-                    <div>
-                    </div>
-                </div>
-                <h2>Friends!</h2>
-                <div class="friends">
-                    <a href="https://botmert.com" class="link-box" target="_blank">
-                        <img src="https://botmert.com/assets/icon.jpg" alt="Website Icon">
-                    </a>
-                    <a href="https://github.com/khcrysalis" class="link-box2" target="_blank">
-                        <img src="https://avatars.githubusercontent.com/u/97859147?v=4" alt="Website Icon">
-                    </a>
-                </div>
-                <div>
-                    <div class="line">
-                    </div>
-                </div>
-                <div id="lastfm-container"></div>
-                <br>
             </div>
         </div>
+
+        <div class="line"></div>
+
+        <h2>Blog posts</h2>
+        <div class="projectwrapper">
+            <a href="/blog/" class="projectcol1box">
+                currently empty
+                <p class="creative-text">wip.
+                </p>
+            </a>
+        </div>
+        <div class="line"> </div>
+        <div class="projectsheader">
+            <h2 style="margin-bottom: 0;">Projects</h2>
+            <p style="margin-top: 3px; color: rgb(180, 180, 180);"></p>
+        </div>
+        <div class="projectwrapper">
+            <a href="https://github.com/fielstamper/kosuka.dev/" class="projectcol1box">
+                <span style="color: rgb(255, 195, 155);">https://kosuka.dev</span>
+                <p class="creative-text">The website you're currently on, built with HTML,
+                    CSS & JS.
+                </p>
+            </a>
+        </div>
+
+
+        <div>
+            <h2>Creative projects</h2>
+            <div class="projectwrapper">
+                <a href="/blender/" class="projectcol1box">
+                    <span style="color: rgb(202, 183, 255);;">nira_chan.blend</span>
+                    <p class="creative-text">A stylised 3d model of Nira from Zutomayo with
+                        size-emphasis on the shoes.</p>
+                </a>
+                <a href="/blender/" class="projectcol2box">
+                    .blend <p class="creative-text">wip</p>
+                </a>
+            </div>
+            <br>
+            <div>
+            </div>
+        </div>
+        <h2>Friends!</h2>
+        <div class="friends">
+            <a href="https://botmert.com" class="link-box" target="_blank">
+                <img src="https://botmert.com/assets/icon.jpg" alt="Website Icon">
+            </a>
+            <a href="https://github.com/khcrysalis" class="link-box2" target="_blank">
+                <img src="https://avatars.githubusercontent.com/u/97859147?v=4" alt="Website Icon">
+            </a>
+        </div>
+        <div>
+            <div class="line">
+            </div>
+        </div>
+        <div id="lastfm-container"></div>
+        <br>
+    </div>
+    </div>
     </div>
     </div>
 </body>
