--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </a>
         </div>
 
-
+        <div class="line"></div>
         <div>
             <h2>Creative projects</h2>
             <div class="projectwrapper">
@@ -96,8 +96,7 @@
             </a>
         </div>
         <div>
-            <div class="line">
-            </div>
+            <div class="line"></div>
         </div>
         <div id="lastfm-container"></div>
         <br>
