--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <br>
             <div>
             </div>
+            <div class="line"></div>
         </div>
         <h2>Friends!</h2>
         <div class="friends">
@@ -96,7 +97,9 @@
             </a>
         </div>
         <div>
-            <div class="line"></div>
+            <div class="line">
+
+            </div>
         </div>
         <div id="lastfm-container"></div>
         <br>
