--- a/about/index.html
+++ b/about/index.html
@@ -33,17 +33,18 @@
                     <a href="/contact/" class="Contact">Contact</a>
                 </div>
             </div>
-
+            <div class="line2"></div>
 
             <div class="title-container">
                 <div class="title-image-wrapper">
                     <div class="title"> <br>
-                        <h1>caitlyn</h1>
+                        <h1>about me</h1>
                         <p class="title-subtext" style="color: rgb(214, 214, 214); font-weight:500;">any pronouns
                         </p>
-                        <div class="line"></div>
                     </div>
                 </div>
-                <div class="title-subtext">
-                    <p style="font-size: 20px; font-weight: 400;"><br>About me</p>
-                </div>
+            </div>
+        </div>
+
+        <div class="line2"></div>
+</body>
