--- a/contact/index.html
+++ b/contact/index.html
@@ -33,45 +33,18 @@
                     <a href="/contact/" class="Contact">Contact</a>
                 </div>
             </div>
-
+            <div class="line2"></div>
 
             <div class="title-container">
                 <div class="title-image-wrapper">
                     <div class="title"> <br>
-                        <h1>caitlyn</h1>
+                        <h1>contact me</h1>
                         <p class="title-subtext" style="color: rgb(214, 214, 214); font-weight:500;">any pronouns
-                        </p>
-                    </div>
-                </div>
-                <div class="title-subtext">
-                    <p style="font-size: 20px; font-weight: 400;"><br>Contact me!</p>
-                </div>
-                <div class="contactbox">
-                    <div class="col1">
-                        <p class="twitterbox">
-                            Twitter
-                        </p>
-                        <p class="twitterbox">
-                            Github
-                        </p>
-                    </div>
-                    <div class="col2">
-                        <p class="twitterbox">
-                            Discord
-                        </p>
-                        <p class="twitterbox">
-                            Email
-                        </p>
-                    </div>
-                    <div class="col3">
-                        <p class="twitterbox">
-                            Other 1
-                        </p>
-                        <p class="twitterbox">
-                            Other 2
                         </p>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="line2"></div>
 </body>
