--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
                     <a href="/contact/" class="Contact">Contact</a>
                 </div>
             </div>
-            <div class="line2"></div>
+            <div class="line"></div>
 
             <div class="title-container">
                 <div class="title-image-wrapper">
