--- a/contact/index.html
+++ b/contact/index.html
@@ -33,7 +33,7 @@
                     <a href="/contact/" class="Contact">Contact</a>
                 </div>
             </div>
-            <div class="line2"></div>
+            <div class="line"></div>
 
             <div class="title-container">
                 <div class="title-image-wrapper">
@@ -46,5 +46,5 @@
             </div>
         </div>
 
-        <div class="line2"></div>
+        <div class="line"></div>
 </body>
