--- a/blender/index.html
+++ b/blender/index.html
@@ -32,11 +32,13 @@
         </div>
         <div class="title-container">
             <div class="title-image-wrapper">
+                <div class="line"></div>
                 <div class="title"> <br>
-                    <h1>caitlyn</h1>
+                    <h1>my blender projects</h1>
                     <p class="title-subtext" style="color: rgb(214, 214, 214); font-weight: 500;">any pronouns
                     </p>
                 </div>
+                <div class="line"></div>
             </div>
             <div class="blender-wrapper">
                 <br>
