--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </div>
         <h2>Friends!</h2>
         <div class="friends">
+            <p style="color: rgb(214, 214, 214)">some really cool people you should check out</p>
             <a href="https://botmert.com" class="link-box" target="_blank">
                 <img src="https://botmert.com/assets/icon.jpg" alt="Website Icon">
             </a>
