--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
         </div>
         <div class="projectwrapper">
             <a href="https://github.com/fielstamper/kosuka.dev/" class="projectcol1box">
-                <span style="color: rgb(255, 195, 155);">https://kosuka.dev</span>
-                <p class="creative-text">The website you're currently on, built with HTML,
-                    CSS & JS.
+                <div class="icon-header">
+                    <span class="project-link">https://kosuka.dev</span>
+                    <div class="icon-container">
+                        <img src="/assets/external-link-svgrepo-com.svg" alt="external link">
+                    </div>
+                </div>
+                <p class="creative-text">
+                    The website you're currently on, built with HTML, CSS & JS.
                 </p>
             </a>
         </div>
