--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <h2 style="margin-bottom: 0;">Projects</h2>
             <p style="margin-top: 3px; color: rgb(180, 180, 180);"></p>
         </div>
+
         <div class="projectwrapper">
             <a href="https://github.com/fielstamper/kosuka.dev/" class="projectcol1box">
                 <div class="icon-header">
@@ -97,7 +98,7 @@
             <a href="https://botmert.com" class="link-box" target="_blank">
                 <img src="https://botmert.com/assets/icon.jpg" alt="Website Icon">
             </a>
-            <a href="https://github.com/khcrysalis" class="link-box2" target="_blank">
+            <a href="https://khcrysalis.dev/" class="link-box2" target="_blank">
                 <img src="https://avatars.githubusercontent.com/u/97859147?v=4" alt="Website Icon">
             </a>
         </div>
