--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
                         </p>
                     </div>
                 </div>
+                <div class="title-icon-header">
+                    <div class="locationbox">
+                        <img src="assets/location-sign-svgrepo-com.svg" alt="location">
+                    </div>
+                    <div class="icon-text">
+                        Australia
+                    </div>
+                    <div class="timebox">
+                        <img src="/assets/time-svgrepo-com.svg" alt="time">
+                    </div>
+                    <div class="icon-text">
+                        GMT+8
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -64,7 +78,7 @@
         <div class="projectwrapper">
             <a href="https://github.com/fielstamper/kosuka.dev/" class="projectcol1box">
                 <div class="icon-header">
-                    <span class="project-link">https://kosuka.dev</span>
+                    <span class="project-link">https://kosuka.dev/</span>
                     <div class="icon-container">
                         <img src="/assets/external-link-svgrepo-com.svg" alt="external link">
                     </div>
