--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         </div>
         <div id="lastfm-container"></div>
         <br>
+        <div class="line"></div>
     </div>
     </div>
     </div>
