--- a/index.html
+++ b/index.html
@@ -122,8 +122,16 @@
             </div>
         </div>
         <div id="lastfm-container"></div>
-        <br>
         <div class="line"></div>
+
+        <div class="bottom-text">
+            <p style="color: rgb(180, 180, 180);">© 2025 Caitlyn <br> Licensed under <a
+                    href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GPL v3 License </a>.
+                <a href="https://github.com/fielstamper/kosuka.dev" target="_blank">Source code</a>.
+            </p>
+        </div>
+
+        <br>
     </div>
     </div>
     </div>
