--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         </div>
         <h2>Friends!</h2>
         <div class="friends">
-            <a href="https://botmert.com" class="link-box" target="_blank">
-                <img src="https://botmert.com/assets/icon.jpg" alt="Website Icon">
+            <a href="https://github.com/botmertcool" class="link-box" target="_blank">
+                <img src="https://avatars.githubusercontent.com/u/68245869?v=4" alt="Website Icon">
             </a>
             <a href="https://khcrysalis.dev/" class="link-box2" target="_blank">
                 <img src="https://avatars.githubusercontent.com/u/97859147?v=4" alt="Website Icon">
